--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
         <div class="container">
             <h1>Autosid - Seu parceiro diário de vendas</h1>
-            <h2>Prepare-se para inovar suas vendas !</h2>
-            <p> Tenha todas as informações dos seus automóveis a venda na palma de sua mão !  </p>
+            <h2>Prepare-se para inovar a sua forma de vender carros !</h2>
+            <p> Tenha todas as informações dos seus veículos a venda na palma de sua mão !  </p>
 
             <!-- <img src="dashboard.png" width="300" height="300" alt="Imagem do Produto">
             <!-- <img src="veiculos.png" width="500" height="500" alt="Imagem do Produto">
