--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
         <section id="inscricao">
 
-            <div class="container">
+            <div class="container" style="width: 50%;">
 
                 <form action="https://formsubmit.co/sidneyycesar@hotmail.com" method="POST">
 
@@ -153,7 +153,7 @@
                         <label for="name">Nome do Contato:</label>
                         <input class="form-control" type="text" name="name" required/>
                     </div>
-                    
+
                     <div class="form-floating mb-3">
                         <label for="email">E-mail</label>
                         <input class="form-control" type="email" name="email" required/>
