update landing page

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
         <div class="container">
             <h1>Autosid</h1>
-            <h1>O seu parceiro diário na venda de veículos</h1>
-            <h2>Prepare-se para inovar a sua forma de vender carros !</h2>
-            <p> Tenha todas as informações do veículo na palma de sua mão e em tempo real </p>
+            <h2>O seu parceiro diário na venda de veículos</h2>
+            <p>Prepare-se para inovar a sua forma de vender carros !</p>
+            <p>Tenha todas as informações do veículo na palma de sua mão e em tempo real. </p>
 
             <!-- <img src="dashboard.png" width="300" height="300" alt="Imagem do Produto">
             <!-- <img src="veiculos.png" width="500" height="500" alt="Imagem do Produto">
@@ -27,7 +27,7 @@
 
             <nav>
                 <ul>
-                    <li><a href="#sobre">Saiba mais</a></li>
+                    <li><a href="#sobre">Saiba Mais</a></li>
                     <!-- <li><a href="#inscricao">Inscreva-se Já</a></li> -->
                 </ul>
             </nav>
@@ -44,7 +44,7 @@
             <div class="container">
 
                 <h3>Sobre o Produto:</h3>
-                <p> Queremos que você embarque conosco neste novo conceito em vender automóveis, através do uso da tecnologia ! </p>
+                <p> Embarque conosco neste novo conceito em vender automóveis, através do uso da tecnologia ! </p>
                 <p>Com o sistema <strong>Autosid</strong> você conseguirá:
                 
                 <ul>
