--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
         <div class="container">
             <h1>Autosid</h1>
-            <h2>O seu parceiro diário na venda de veículos</h2>
-            <p>Prepare-se para inovar a sua forma de vender carros !</p>
+            <!-- <h2>O seu parceiro diário na venda de veículos</h2> -->
+            <h2>Prepare-se para inovar a sua forma de vender carros !</h2>
             <p>Tenha todas as informações do veículo na palma de sua mão e em tempo real. </p>
 
             <!-- <img src="dashboard.png" width="300" height="300" alt="Imagem do Produto">
@@ -44,7 +44,7 @@
             <div class="container">
 
                 <h3>Sobre o Produto:</h3>
-                <p> Embarque conosco neste novo conceito em vender automóveis, através do uso da tecnologia ! </p>
+                <p> Embarque conosco neste novo conceito em vender automóveis </p>
                 <p>Com o sistema <strong>Autosid</strong> você conseguirá:
                 
                 <ul>
@@ -138,7 +138,7 @@
 
         <section id="inscricao">
 
-            <div class="container" style="width: 50%;">
+            <div class="container">
 
                 <form action="https://formsubmit.co/sidneyycesar@hotmail.com" method="POST">
 
