mudar e-mail de contato

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
             <div class="container">
 
-                <form action="https://formsubmit.co/sidneyycesar@hotmail.com" method="POST">
+                <form action="https://formsubmit.co/autosid.app@gmail.com" method="POST">
 
                     <h4>Entrar na Lista de Espera</h4>
                     
