update landing page

--- a/index.html
+++ b/index.html
@@ -191,6 +191,12 @@
 
     </main>
 
+    <div id="overlay" class="hidden">
+        <div class="overlay-content">
+            <p>Aguarde...</p>
+        </div>
+    </div>
+    
     <script src="scripts.js"></script>
 
 </body>
